# MinoHome

./: .gitignore  README.md  compose.yml  sdkconfig.old
homeassistant/: configuration.yaml  mqtt.yaml  mqtt_sensors.yaml  template_sensors.yaml
homeassistant/lovelace/: mqtt_dashboard.yaml
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/includes/: bh1750.h  dht20.h  i2c_init.h  led_alive.h  my_mqtt.h  my_wifi.h  potentiometer.h  waveshare_tvoc_sensor.h
main/includes/sensors/: bh1750.h  potentiometer.h  waveshare_tvoc_sensor.h
main/includes/utils/: led_alive.h  utils.h
main/includes/wired-protocol-modules/: i2c.h  uart_init.h
main/includes/wireless-protocol-modules/: mqtt.h  my_mqtt.h  wifi.h
main/src/: bh1750.c  dht20.c  i2c_init.c  led_alive.c  my_mqtt.c  my_wifi.c  potentiometer.c  poti.c  waveshare_tvoc_sensor.c
main/src/sensors/: bh1750.c  dht20.c  potentiometer.c  waveshare_tvoc_sensor.c
main/src/utils/: led_alive.c  utils.c
main/src/wired-protocol-modules/: i2c.c  i2c_init.c  uart.c  uart_init.c
main/src/wireless-protocol-modules/: mqtt.c  my_mqtt.c  my_wifi.c  wifi.c
